--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "generate-icons": "vsvg -s ./src/assets/svg-icons -t ./src/assets/compiled-icons",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "eslint-config-airbnb-base": "^13.1.0",
     "vue": "^2.6.6",
     "vuex": "^3.0.1"
   },
@@ -26,6 +28,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-svgicon": "^3.2.4",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
