#минимизация css и переделка webpack + json

--- a/package.json
+++ b/package.json
@@ -6,47 +6,40 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
     "start": "webpack --mode development",
     "build": "webpack --mode production --progress --hide-modules --display-error-details",
-    "lint": "vue-cli-service lint",
-    "generate-icons": "vsvg -s ./src/assets/svg-icons -t ./src/assets/compiled-icons",
-    "test:unit": "vue-cli-service test:unit"
+    "generate-icons": "vsvg -s ./src/assets/svg-icons -t ./src/assets/compiled-icons"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
+    "vue": "^2.6.6",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^7.12.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "style-loader": "^0.23.1",
-    "vue": "^2.6.6",
-    "vuex": "^3.0.1",
-    "webpack": "^4.29.6"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-plugin-unit-jest": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "css-loader": "^2.1.1",
+    "babel-polyfill": "^6.26.0",
+    "cross-env": "^5.2.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "clean-webpack-plugin": "^2.0.1",
     "eslint": "^5.15.3",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "vue-svgicon": "^3.2.4",
     "vue-template-compiler": "^2.5.21",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack": "^4.29.6"
   },
   "eslintConfig": {
     "root": true,
