--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "vue-svgicon": "^3.2.4",
     "vue-template-compiler": "^2.5.21",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "eslintConfig": {
     "root": true,
