replace webpack config and minifixes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline",
     "start": "webpack --mode development",
     "build": "webpack --mode production --progress --hide-modules --display-error-details",
     "generate-icons": "vsvg -s ./src/assets/svg-icons -t ./src/assets/compiled-icons"
@@ -16,12 +16,28 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "acorn": "^6.1.1",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
-    "cross-env": "^5.2.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "cross-env": "^5.0.5",
     "css-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.2.4",
+    "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.8",
+    "webpack": "^4.29.6",
+    "webpack-async-chunk-names-plugin": "^0.1.1",
+    "acorn": "^6.1.1",
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -29,22 +45,9 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-vue": "^5.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^3.0.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
-    "vue-loader": "^15.7.0",
-    "vue-style-loader": "^4.1.2",
     "vue-svgicon": "^3.2.4",
-    "vue-template-compiler": "^2.5.21",
-    "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   },
